src/objects/GEM_API_Settings__mdt.object
<CustomObject>
    <description>Configuration that enables sync between HEDA, GEM, and NPSP. WARNING: Do not change these settings unless directed by http://Salesforce.org support.</description>
    <fields>
        <fullName>API_HEDA_Class__c</fullName>
        <defaultValue>&apos;API_HEDA&apos;</defaultValue>
        <description>The name of the class that enables HEDA to access the Gift Entry Management TDTM interface. Do not change the default value for this field.</description>
        <inlineHelpText>The name of the class that enables HEDA to access the Gift Entry Management TDTM interface. Do not change the default value for this field.</inlineHelpText>
        <label>API HEDA Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_NPSP_Class__c</fullName>
        <defaultValue>&apos;API_NPSP&apos;</defaultValue>
        <description>The name of the class that enables NPSP to access the Gift Entry Management TDTM interface. Do not change the default value for this field.</description>
        <inlineHelpText>The name of the class that enables NPSP to access the Gift Entry Management TDTM interface. Do not change the default value for this field.</inlineHelpText>
        <label>API NPSP Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_GEM__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable Gift Entry Management managed package in HEDA and NPSP. Do not change the default value for this field.</description>
        <inlineHelpText>Enable Gift Entry Management managed package in HEDA and NPSP. Do not change the default value for this field.</inlineHelpText>
        <label>Use GEM</label>
        <type>Checkbox</type>
    </fields>
    <label>GEM API Settings</label>
    <pluralLabel>GEM API Settings</pluralLabel>
</CustomObject>